[project]
name = "yay"
version = "0.1.0"
author = "Pawel Borkar <pawel@duck.com>"
homepage = "https://yay.pawel.in"
description = "URL shortener for developers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
